# ROS_backend_challenge

./: README.md  frames_2026-07-15_10.49.34.gv
src/coverage_planner/: package.xml  setup.py
src/coverage_planner/coverage_planner/: boustrophedon_planner.py  simple_mapper.py
src/robot_description/: CMakeLists.txt  package.xml
src/robot_description/config/: nav2_params.yaml  slam_toolbox.yaml
src/robot_description/launch/: coverage.launch.py  display.launch.py  gazebo.launch.py  navigation.launch.py  rviz.launch.py  slam.launch.py
src/robot_description/maps/: arena_map.pgm  arena_map.yaml  ikan_goreng.yaml  kacang_goreng.yaml
src/robot_description/rviz/: nav2.rviz  robot_description.rviz  slam.rviz
src/robot_description/urdf/: turtlebot_custom.urdf.xacro
src/robot_description/worlds/: arena.sdf
